att sobre login e registro
agora o site tem uma alert de de erro caso a senha estive errada ou caso não existe a conta, e também foi adicionado a primeira versão da parte logada do site

--- a/Css/index.css
+++ b/Css/index.css
@@ -126,6 +126,7 @@ form > button{
     font-weight: 700;
     font-style: normal;
     border-bottom: none;
+    box-shadow: 1px 2px 10px black;
 }
 form a{
     text-decoration: none;
