--- a/Css/registro.css
+++ b/Css/registro.css
@@ -27,6 +27,7 @@ main {
     display: flex;
     background-color: rgba(255, 255, 255, 0.363);
     border-radius: 15px;
+    box-shadow: 2px 4px 40px black;
 
 }
 form {
@@ -64,6 +65,7 @@ form > button{
     font-weight: 700;
     font-style: normal;
     border-bottom: none;
+    box-shadow: 1px 2px 30px black;
 }
 form a{
     text-decoration: none;
