--- a/Css/segundaParte.css
+++ b/Css/segundaParte.css
@@ -3,7 +3,7 @@
 body{
     overflow:hidden;
     font-family: "Goldman", sans-serif;
-    font-weight: 530;
+    font-weight: 730;
     font-style: normal;
 }
 
@@ -30,28 +30,31 @@ body{
     margin-top: 60px;
     list-style: none;
     color: black;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .bloco > ul > li {
     text-decoration: none;
-    margin-top: 15px;
+    margin-top: 20px;
     background-color: white;
     padding: 3px;
     width: 200px;
     position: relative;
-    right: 28px;
+    right: 18px;
     cursor: pointer;
-    border-radius: 5px;
-    padding: 5px;
+    border-radius: 10px 50px 50px 10px;
+    padding: 8px;
+    box-shadow: 1px 1px 4px black
+
 }
 .bloco > #sair {
-    margin-top: 370px;
+    margin-top: 320px;
     margin-left: 15px;
 }
 .bloco > #sair > li{
     width: 75px;
     text-align: center;
+    border-radius: 5px;
 }
 
 .bloco > ul>  li:hover {
@@ -59,6 +62,7 @@ body{
     transition: all 100ms ease-in;
     transform: scale(1.1);
 }
+
 
 /*
 .bloco > #button1{
@@ -120,4 +124,53 @@ body{
     width: 300px;
     font-size: 15px;
 
+}
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+}
+h2 {
+    margin-bottom: 20px;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+li {
+    margin: 10px 0;
+}
+button {
+    background-color: #4CAF50; /* Verde */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.form-container {
+    display: none; /* Esconde todos os formulários inicialmente */
+    margin-bottom: 20px;
+}
+.form-container.active {
+    display: block; /* Exibe o formulário ativo */
+}
+.form-container label {
+    display: block;
+    margin-top: 10px;
+}
+.form-container input[type="submit"] {
+    background-color: #4CAF50; /* Verde */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
 }
