--- a/Css/registro.css
+++ b/Css/registro.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -6,47 +6,116 @@
 
 body {
     height: 100vh;
+    width: 100%;
     margin: 0px;
-    font-family: "Goldman", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    background-image: url(../Imagens/pexels-ron-lach-8487211.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+    background-color: #CDCDCD;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 main {
-    height: 100vh;
-    margin: auto;
-    display: flex;
-    background-color: #d9d9d946;
-}
-.registro {
-    margin: auto;
-    width: 400px;
-    height: 450px;
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.363);
+    display: grid;
+    height: 90%;
+    width: 90%;
+    grid-template-columns: 30% 70%;
+    grid-template-areas: "conteudoInformacao registro";
+    background-color: #FFFFFF;
     border-radius: 15px;
-    box-shadow: 2px 4px 40px black;
+    box-shadow: 2px 2px 20px black;
+}
 
+.conteudoInformacao {
+    grid-area: conteudoInformacao;
+    background-color: #008576;    
+    box-shadow: 1px 1px 3px #07b39f;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px 0px 0px 15px;
+}
+.irLogin{
+    width: 100%;
+    height: 50%;
+    margin-top: 110px;
+}
+
+.irLogin > h1 {
+    margin: 0px 10px 0px 40px;
+    color: white;
+    font-size: 25pt;
+
+
+}
+.irLogin > p {
+    color: white;
+    font-size: 11pt;
+    font-weight: 200;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.irLogin > a {
+    color: white;
+    font-size: 15pt;
+    font-weight: 800;
+    border: 3px solid white;
+    height: 60px;
+    width: 200px;    
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    cursor: pointer;
+    text-decoration: none;
+}
+.irLogin > a:hover {
+    transition: all 200ms ease-in;
+    transform: scale(1.1);
+}
+
+.registro {
+    grid-area: registro;
+    background-color: #FFFFFF;
+    margin: auto;
+    text-align: center;
+
+}
+.registro > h2{
+    margin-bottom: 20px;
+    color: #008575;
+    font-weight: 800;
+    font-size: 30px;
+}
+.registro > p{
+    margin-bottom: 30px;
+    color: #A19292;
+    font-weight: 400;
 }
 form {
     margin: auto;
-}
-form > label{
-    display: flex;
-    color: black;
-    font-size: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
+    width: 500px;
 }
 form > input {
-    padding: 15px;
-    width: 350px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.521);
-    box-shadow: 0 1px 5px rgb(107, 107, 107); 
+    height: 60px;
+    width: 100%;
+    background-color: #9c9c9c73;
     border: none;
     outline: none;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    font-size: 17px;
+    padding-left: 60px;
+}
+form > input::placeholder {
+    font-size: 16px;
+    color: #9C9C9C;
 }
 form > button{
     display: flex;
@@ -57,15 +126,13 @@ form > button{
     border: none;
     background-color: #008575;
     justify-content: center;
-    padding: 10px;
+    padding: 13px;
     width: 250px;
-    border-radius: 10px;
+    border-radius: 50px;
     font-size: 20px;
-    font-family: "Goldman", sans-serif;
-    font-weight: 700;
-    font-style: normal;
     border-bottom: none;
-    box-shadow: 1px 2px 30px black;
+    font-weight: 800;
+    color: white;
 }
 form a{
     text-decoration: none;
@@ -74,4 +141,22 @@ form a{
 button:hover{
     transition: all 200ms ease-in;
     transform: scale(1.1);
+}
+.iconLogin{
+    position: absolute;
+    left: 47%;
+    top: 42%;
+    transform: translateY(-50%);
+}
+.iconEmail{
+    position: absolute;
+    left: 46.60%;
+    top: 54%;
+    transform: translateY(-50%);
+}
+.iconSenha{
+    position: absolute;
+    left: 47%;
+    top: 66%;
+    transform: translateY(-50%);
 }
